# routes/api.php
@@ -33,6 +33,8 @@ Route::post("login", [UserController::class, 'login']);
 
 
 Route::middleware('auth:sanctum')->group(function () {
+    Route::post("logout", [UserController::class, 'logout']);
+
     Route::get('categories', function () {
         return new CategoryCollection(Category::all());
     });
@@ -49,19 +51,15 @@ Route::middleware('auth:sanctum')->group(function () {
         return new ProductResource(Product::findOrFail($id));
     });
 
-    //Route::post('cart/add_product', [CartController::class, 'addProducts']);
-    Route::post('cart/add_product', [CartItemController::class, 'store']);
-    /*Route::put('cart/update/{id}',function ($id){
-        return
-    })*/
-    Route::delete('cart', [CartController::class, 'destroy']);
-
-    //Route::get('carts', [CartController::class, 'index']);
     Route::get('carts', function () {
         return CartResource::collection(Cart::all());
     });
 
     Route::get('cart', [CartController::class, 'show']);
+
+    Route::post('cart/add_item', [CartItemController::class, 'store']);
+
+    Route::delete('cart', [CartController::class, 'destroy']);
 });
 
 
